--- a/Home/Home.html
+++ b/Home/Home.html
@@ -4,6 +4,93 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
+      <link rel="stylesheet" href="Home.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
    </head>
-   <body></body>
+   <body>
+   <div class="master-div">
+      <div class="navbar">
+         <div class="left-navbar">
+            <div class="logo">
+               <i class="fa-brands fa-spotify" style="color: #1db954"></i>
+            </div>
+            <div class="name-logo">
+               <h1 class="name">Spotify Controller</h1>
+            </div>
+         </div>
+         <div class="right-navbar">
+            <ul class="listed">
+               <li><a href="#">Home</a></li>
+               <li><a href="#">How It Work</a></li>
+               <li><a href="#">About Us</a></li>
+            </ul>
+         </div>
+      </div>
+      <div class="corner">
+         <div class="left-corner">
+            <div class="video">
+               <iframe
+                  width="600"
+                  height="400"
+                  src="https://www.youtube.com/embed/wJnBTPUQS5A?si=CZIYXlYgojGa01nA"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+               ></iframe>
+            </div>
+         </div>
+         <div class="right-corner">
+            <div class="list-gestures">
+               <div>
+                  <h1><b>Gestures</b></h1>
+               </div>
+               <div class="listed-mid">
+                  <ul>
+                     <li>1. Play / Pause</li>
+                     <li>2. Next</li>
+                     <li>3. Previous</li>
+                     <li>4. Repeat</li>
+                     <li>5. Shuffle</li>
+                     <li>6. Volume Up</li>
+                     <li>7. Volume Down</li>
+                  </ul>
+               </div>
+               <div class="text-mid">
+                  <p><u>Watch The guide video </u>if you confused or go to <br><b>"How it Work"<b> tab</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="button-modify">
+         <div class="button-bottom">
+            <button class="btn">
+               <p>START</p>
+            </button>
+            <button class="btn">
+               <p>PAUSE</p>
+            </button>
+            <button class="btn">
+               <p>LAUNCH</p>
+            </button>
+            <button class="btn btn-red">
+               <p>EXIT</p>
+            </button>
+         </div>
+      </div>
+   </div>
+   </body>
 </html>
+
+<!-- <div class="logo">
+   <img src="logo.png" alt="" />
+</div>
+<div class="nav">
+   <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+   </ul>
+</div> -->
